# ldtools

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  _makefile_common  configure.sh  doxygen-config  makefile_linux  makefile_win
class/: CMakeLists.txt  sprite_table.cpp  ttf_manager.cpp  ttf_manager.h  view_composer.cpp  view_composer.h
include/ldtools/: animation_event_handler.h  animation_table.h  fps_counter.h  lib.h  sprite_table.h  time_definitions.h  ttf_manager.h  view_composer.h
lib/: CMakeLists.txt
lib/ldtools/: CMakeLists.txt  animation_event_handler.cpp  animation_table.cpp  fps_counter.cpp  lib.cpp  sprite_table.cpp  ttf_manager.cpp  view_composer.cpp
make/: linux.template  makefile_common
tests/sprite_table/: main.cpp  table.txt
